<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:background="?attr/colorButtonNormal"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:padding="10dp"
        android:id="@+id/tvMesasSalones"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMesasSalones"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/textSalones"
        android:textAlignment="center"
        android:textSize="20sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/textDescripcion">

        <LinearLayout
            android:id="@+id/llSalones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textMesas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/textDescripcion">

        <GridLayout
            android:id="@+id/glMesas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">

    </GridLayout>
</ScrollView>



    </LinearLayout>