<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:padding="5dp"
        android:id="@+id/tvMesasSalonesDiv1"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textComandaGestionDiv"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Elementos de la lista -->

    <TextView
        android:padding="5dp"
        android:id="@+id/tvCuenta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCuenta1"
        android:textSize="17sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">

        <TextView
            android:id="@+id/tvCantidadDiv1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Cant"
            android:textSize="16dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvProductoDiv1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Producto"
            android:textSize="16dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvSubTotalDiv1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Subtotal"
            android:textSize="16dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPedidos1"
        android:layout_width="match_parent"
        android:layout_height="175dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/textAgregarCuenta2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:padding="5dp"
        android:id="@+id/tvCuenta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCuenta2"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">

        <TextView
            android:id="@+id/tvCantidadDiv2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Cant"
            android:textSize="16dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvProductoDiv2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Producto"
            android:textSize="16dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvSubTotalDiv2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Subtotal"
            android:textSize="16dp"
            android:textAlignment="center"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPedidos2"
        android:layout_width="match_parent"
        android:layout_height="175dp" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Dividir pedido" />


</LinearLayout>