<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/colordos"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="45sp"
            android:background="@color/colortres"
            app:titleTextColor="@color/colorcinco"
            android:minHeight="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEstilo"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginRight="3dp"
                android:text="Cuentas"
                android:textAlignment="center"
                android:textSize="10sp"
                android:background="@drawable/button_background"
                android:textColor="@color/coloruno"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCuentas"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginRight="3dp"
                android:text="Cuentas"
                android:textAlignment="center"
                android:textSize="10sp"
                android:background="@drawable/button_background"
                android:textColor="@color/coloruno"/>

        </androidx.appcompat.widget.Toolbar>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Elementos de la lista -->
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llAcciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/colorcuatro"
            android:id="@+id/tvTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="#Ticket:" />

        <TextView
            android:textColor="@color/colorcuatro"
            android:id="@+id/tvMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="Mesa" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/colorcuatro"
            android:id="@+id/tvCliente"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Cliente:" />

        <TextView
            android:textColor="@color/colorcuatro"
            android:id="@+id/tvMesero"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:padding="5dp"
            android:text="Mesero:" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:padding="0dp">

        <TextView
            android:id="@+id/tvImagen"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="Img"
            android:textAlignment="textStart"
            android:textColor="@color/colorcuatro"
            android:textSize="10sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/colorcuatro"
                android:id="@+id/tvProducto"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="Producto"
                android:textAlignment="textStart"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/colorcuatro"
                android:id="@+id/tvCantidad"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Cant"
                android:textAlignment="center"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/colorcuatro"
                android:id="@+id/tvSubTotal"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="SubTotal"
                android:textAlignment="center"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/colorcuatro"
                android:id="@+id/tv"
                android:layout_width="25sp"
                android:layout_height="25sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPedidos"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/colortres"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:textColor="@color/colorcuatro"
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/textFamilias"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:textColor="@color/colorcuatro"
            android:id="@+id/textProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textProductos"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@color/coloruno"
            android:contentDescription="@string/textDescripcion">

            <LinearLayout
                android:id="@+id/llFamilias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DEF2F1"
                android:orientation="vertical" />

        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@color/coloruno"
            android:contentDescription="@string/textDescripcion">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <GridLayout
                    android:id="@+id/glProductos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>